ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:														  \
|		 - GUI:													  |
|				* to fix: no errors on adding user (custom HP)	  |
\_________________________________________________________________/

2008-01-14 Benedikt Heintel
	- SETUP:
		* Fixed #55: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0 RC3
						and from ispCP ω 1.0.0 RC2 to ispCP ω 1.0.0 RC3
		* Fixed #955: "ispcp" Folder in /etc/apache2 is missing

2008-01-13 Benedikt Heintel
	- SETUP:
		* Fixed #953: update script fails to start
	- TOOLS:
		* Updated phpMyAdmin to version 2.11.4 RC1 (#949)

2008-01-13 Christian Hernmarck
	- ENGINE:
		* Fixed #947: file change during tar/backup stopps all other following backups

2008-01-12 Benedikt Heintel
	- DOCS:
		* Changed debian-packages-etch
	- SETUP:
		* Updated: added RC2 -> RC3 update to Update Script (not yet completed)
		* Updated: Makefile for apache folder

2008-01-10 Benedikt Heintel
	- CONFIGS:
		* Deleted: Alias domain.tld/ispcp

2008-01-07 Christian Hernmarck
	- TOOLS:
		* Fixed #937 (but reopened #714): some php errors in pma theme
		* Added some goodies: - a check while reading the config-variables if all are present
		*	- a small shell script which could be run before ispcp-setup

2008-01-07 Benedikt Heintel
	- TOOLS:
		* Fixed #933: Webmail layout

2008-01-06 Benedikt Heintel
	- ENGINE:
		* Fixed #944: Error in Backupengine

2007-12-21 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)

2007-12-17 Jochen Manz
	- GUI:
		* Fixed #935: Admin created date is everytime N/A
		* Fixed #936: The Gender field in Orderpanel is not as it should

2007-12-17 Christian Hernmarck
	- GUI:
		*Fixed #924: Alias order notification sent to customer

2007-12-16 Benedikt Heintel
	- GUI:
		* Added: Gender patch (thanks to Jochen Manz)
	- TOOLS:
		* Fixed: Templates of Squirrelmail (new template version)