@@ -19,31 +19,48 @@
 
 
 
-require '../include/ispcp-lib.php';
+include '../include/ispcp-lib.php';
 
 check_login(__FILE__);
 
 $tpl = new pTemplate();
 
 $tpl -> define_dynamic('page', $cfg['CLIENT_TEMPLATE_PATH'].'/webtools.tpl');
-
 $tpl -> define_dynamic('page_message', 'page');
-
+$tpl -> define_dynamic('active_awstats', 'page');
 $tpl -> define_dynamic('logged_from', 'page');
 
 $theme_color = $cfg['USER_INITIAL_THEME'];
 
+
 $tpl -> assign(
                 array(
-                        'TR_CLIENT_WEBTOOLS_PAGE_TITLE' => tr('ispCP - Client/Webtools'),
+                        'TR_CLIENT_WEBTOOLS_PAGE_TITLE' => tr('ISPCP - Client/Webtools'),
                         'THEME_COLOR_PATH' => "../themes/$theme_color",
-                        'THEME_CHARSET' => tr('encoding'), 
+                        'THEME_CHARSET' => tr('encoding'),
                         'ISPCP_LICENSE' => $cfg['ISPCP_LICENSE'],
-						'ISP_LOGO' => get_logo($_SESSION['user_id'])
+			   'ISP_LOGO' => get_logo($_SESSION['user_id'])
                      )
               );
+			  
+			  
+function gen_page_awstats($tpl) {
+	global $cfg;
+	$awstats_act = $cfg['AWSTATS_ACTIVE'];
+		if ( $awstats_act != 'yes'){
+			$tpl->assign('ACTIVE_AWSTATS', '');						
+		}else{
+			$tpl -> assign(
+                		array(
+							'AWSTATS_PATH' => 'http://'.$_SESSION['user_logged'].'/stats/',
+					    	'AWSTATS_TARGET' => '_blank'
+						)
+              		);
+		}
+}
 
 
+gen_page_awstats($tpl);
 
 
 /*
@@ -63,21 +80,21 @@ $tpl -> assign(
                        'TR_WEBTOOLS' => tr('Webtools'),
 					   'TR_BACKUP' => tr('Backup'),
 					   'TR_ERROR_PAGES' => tr('Error pages'),
-					   'TR_ERROR_PAGES_TEXT' => tr('Customise error pages for your domain'),
+					   'TR_ERROR_PAGES_TEXT' => tr('Customize error pages for your domain'),
 					   'TR_BACKUP_TEXT' => tr('Backup and restore settings'),
 					   'TR_WEBMAIL_TEXT' => tr('Access your mail through the web interface'),
 					   'TR_FILEMANAGER_TEXT' => tr('Access your files through the web interface'),
-					   'TR_HTACCESS_TEXT' => tr('Manage protected areas, users and groups'),
+					   'TR_AWSTATS_TEXT' => tr('Access your Awstats statistics'),
+					   'TR_HTACCESS_TEXT' => tr('Manage protected areas, users and groups')
                      )
               );
 
 gen_page_message($tpl);
-
 $tpl -> parse('PAGE', 'page');
 
 $tpl -> prnt();
 
-if ($cfg['DUMP_GUI_DEBUG']) dump_gui_debug();
+if (isset($cfg['DUMP_GUI_DEBUG'])) dump_gui_debug();
 
 unset_messages();
 ?>
