@@ -13,28 +13,29 @@
 </script>
 </head>
 
-<body onLoad="MM_preloadImages('{THEME_COLOR_PATH}/images/icons/database_a.gif','{THEME_COLOR_PATH}/images/icons/domains_a.gif','{THEME_COLOR_PATH}/images/icons/ftp_a.gif','{THEME_COLOR_PATH}/images/icons/general_a.gif' ,'{THEME_COLOR_PATH}/images/icons/email_a.gif','{THEME_COLOR_PATH}/images/icons/webtools_a.gif','{THEME_COLOR_PATH}/images/icons/statistics_a.gif','{THEME_COLOR_PATH}/images/icons/support_a.gif')">
+<body onLoad="MM_preloadImages('{THEME_COLOR_PATH}/images/icons/database_a.gif','{THEME_COLOR_PATH}/images/icons/domains_a.gif','{THEME_COLOR_PATH}/images/icons/ftp_a.gif','{THEME_COLOR_PATH}/images/icons/general_a.gif','{THEME_COLOR_PATH}/images/icons/logout_a.gif','{THEME_COLOR_PATH}/images/icons/email_a.gif','{THEME_COLOR_PATH}/images/icons/webtools_a.gif','{THEME_COLOR_PATH}/images/icons/statistics_a.gif','{THEME_COLOR_PATH}/images/icons/support_a.gif')">
 <!-- BDP: logged_from --><table width="100%"  border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td height="20" nowrap background="{THEME_COLOR_PATH}/images/button.gif">&nbsp;&nbsp;&nbsp;<a href="change_user_interface.php?action=go_back"><img src="{THEME_COLOR_PATH}/images/icons/close_interface.png" width="18" height="18" border="0" align="absmiddle"></a> <font color="red">{YOU_ARE_LOGGED_AS}</font> </td>
       </tr>
     </table>
-	<!-- EDP: logged_from -->
+<!-- EDP: logged_from -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="100%" style="border-collapse: collapse;padding:0;margin:0;">
-<tr>
-<td align="left" valign="top" style="vertical-align: top; width: 195px; height: 56px;"><img src="../themes/omega_original/images/top/top_left.jpg" border="0"></td>
-<td style="height: 56px; width:100%; background-image: url(../themes/omega_original/images/top/top_bg.jpg)"><img src="../themes/omega_original/images/top/top_left_bg.jpg" border="0"></td>
-<td style="width: 73px; height: 56px;"><img src="../themes/omega_original/images/top/top_right.jpg" border="0"></td>
-</tr>
+	<tr>
+		<td align="left" valign="top" style="vertical-align: top; width: 195px; height: 56px;"><img src="{THEME_COLOR_PATH}/images/top/top_left.jpg" border="0"></td>
+		<td style="height: 56px; width: 785px;"><img src="{THEME_COLOR_PATH}/images/top/top_left_bg.jpg" border="0"></td>
+		<td style="width:100%; background-image: url({THEME_COLOR_PATH}/images/top/top_bg.jpg)">&nbsp;</td>
+		<td style="width: 73px; height: 56px;"><img src="{THEME_COLOR_PATH}/images/top/top_right.jpg" border="0"></td>
+	</tr>
 	<tr>
 		<td style="width: 195px; vertical-align: top;">{MENU}</td>
-	    <td colspan=2 style="vertical-align: top;"><table style="width: 100%; border-collapse: collapse;padding:0;margin:0;">
+	    <td colspan=3 style="vertical-align: top;"><table style="width: 100%; border-collapse: collapse;padding:0;margin:0;">
           <tr height="95";>
             <td style="padding-left:30px; width: 100%; background-image: url({THEME_COLOR_PATH}/images/top/middle_bg.jpg);">{MAIN_MENU}</td>
             <td style="padding:0;margin:0;text-align: right; width: 73px;vertical-align: top;"><img src="{THEME_COLOR_PATH}/images/top/middle_right.jpg" border="0"></td>
           </tr>
           <tr height="*">
-            <td colspan=3><table width="100%" border="0" cellspacing="0" cellpadding="0">
+            <td height="415" colspan=3><table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td align="left"><table width="100%" cellpadding="5" cellspacing="5">
                     <tr>
@@ -50,9 +51,9 @@
                       <td width="25">&nbsp;</td>
                       <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td width="55"><a href="error_pages.php"><img src="{THEME_COLOR_PATH}/images/icons/errordocsicon.gif" width="46" height="46" border="0"></a></td>
-                            <td><a href="error_pages.php" class="link">{TR_ERROR_PAGES}</a><br>
-                              {TR_ERROR_PAGES_TEXT}</td>
+                            <td width="65"><div align="center"><a href="error_pages.php"><img src="{THEME_COLOR_PATH}/images/icons/errordocsicon.gif" width="46" height="46" border="0"></a></div></td>
+                            <td width="1065"><a href="error_pages.php" class="link"> &nbsp;{TR_ERROR_PAGES}</a><br>
+                            &nbsp;{TR_ERROR_PAGES_TEXT}</td>
                           </tr>
                       </table></td>
                     </tr>
@@ -60,9 +61,9 @@
                       <td>&nbsp;</td>
                       <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td width="55"><a href="backup.php"><img src="{THEME_COLOR_PATH}/images/icons/backupicon.gif" width="46" height="46" border="0"></a></td>
-                            <td><a href="backup.php" class="link">{TR_BACKUP}</a><br>
-                              {TR_BACKUP_TEXT}</td>
+                            <td width="65"><div align="center"><a href="backup.php"><img src="{THEME_COLOR_PATH}/images/icons/backupicon.gif" width="46" height="46" border="0"></a></div></td>
+                            <td><a href="backup.php" class="link">&nbsp;{TR_BACKUP}</a><br>
+                              &nbsp;{TR_BACKUP_TEXT}</td>
                           </tr>
                       </table></td>
                     </tr>
@@ -70,9 +71,11 @@
                       <td>&nbsp;</td>
                       <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td width="55"><a href="protected_areas.php"><img src="{THEME_COLOR_PATH}/images/icons/htaccessicon.gif" width="46" height="46" border="0"></a></td>
-                            <td><a href="protected_areas.php" class="link">{TR_HTACCESS}</a><br>
-                              {TR_HTACCESS_TEXT}</td>
+                            <td width="65"><div align="center">
+                              <p><a href="protected_areas.php"><img src="{THEME_COLOR_PATH}/images/icons/htaccessicon.gif" width="46" height="46" border="0"></a></p>
+                              </div></td>
+                            <td><a href="protected_areas.php" class="link">&nbsp;{TR_HTACCESS}</a><br>
+                              &nbsp;{TR_HTACCESS_TEXT}</td>
                           </tr>
                       </table></td>
                     </tr>
@@ -80,9 +83,9 @@
                       <td>&nbsp;</td>
                       <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td width="55"><a href="{WEBMAIL_PATH}" target="{WEBMAIL_TARGET}"><img src="{THEME_COLOR_PATH}/images/icons/webmailicon.gif" width="46" height="46" border="0"></a></td>
-                            <td><a href="{WEBMAIL_PATH}" target="{WEBMAIL_TARGET}" class="link">{TR_WEBMAIL}</a><br>
-                              {TR_WEBMAIL_TEXT}</td>
+                            <td width="65"><div align="center"><a href="{WEBMAIL_PATH}" target="{WEBMAIL_TARGET}"><img src="{THEME_COLOR_PATH}/images/icons/webmailicon.gif" width="46" height="46" border="0"></a></div></td>
+                            <td><a href="{WEBMAIL_PATH}" target="{WEBMAIL_TARGET}" class="link">&nbsp;{TR_WEBMAIL}</a><br>
+                              &nbsp;{TR_WEBMAIL_TEXT}</td>
                           </tr>
                       </table></td>
                     </tr>
@@ -90,12 +93,26 @@
                       <td>&nbsp;</td>
                       <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
                           <tr>
-                            <td width="55"><a href="{FILEMANAGER_PATH}" target="{FILEMANAGER_TARGET}"><img src="{THEME_COLOR_PATH}/images/icons/filemanagericon.gif" width="46" height="46" border="0"></a></td>
-                            <td><a href="{FILEMANAGER_PATH}" target="{FILEMANAGER_TARGET}" class="link">{TR_FILEMANAGER}</a><br>
-                              {TR_FILEMANAGER_TEXT}</td>
+                            <td width="65"><div align="center"><a href="{FILEMANAGER_PATH}" target="{FILEMANAGER_TARGET}"><img src="{THEME_COLOR_PATH}/images/icons/filemanagericon.gif" width="46" height="46" border="0"></a></div></td>
+                            <td><a href="{FILEMANAGER_PATH}" target="{FILEMANAGER_TARGET}" class="link">&nbsp;{TR_FILEMANAGER}</a><br>
+                              &nbsp;{TR_FILEMANAGER_TEXT}</td>
                           </tr>
                       </table></td>
                     </tr>
+
+					<!-- BDP: active_awstats -->
+                    <tr>
+                     <td>&nbsp;</td>
+                      <td class="content"><table width="100%"  border="00" cellspacing="0" cellpadding="0">
+                        <tr>
+                          <td width="65"><div align="center"><a href="{AWSTATS_PATH}" target="{AWSTATS_TARGET}"><img src="{THEME_COLOR_PATH}/images/icons/awstatsicon.gif" alt="awstats" width="46" height="46" border="0"></a></div></td>
+                          <td><a href="{AWSTATS_PATH}" target="{AWSTATS_TARGET}" class="link">&nbsp;{TR_AWSTATS}</a><br>
+                            &nbsp;{TR_AWSTATS_TEXT}</td>
+                        </tr>
+                      </table></td>
+                    </tr>
+					<!-- EDP: active_awstats -->
+
                 </table></td>
                 <td>&nbsp;</td>
               </tr>
